--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: postgres:12
     ports:
       - "6543:5432"
+    volumes:
+      - ./sql:/docker-entrypoint-initdb.d/
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
