--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "crypto-js": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
+    "react-dropzone-uploader": "^2.11.0",
     "react-loader-spinner": "^3.1.14",
     "react-picture-annotation": "^1.0.3",
-    "react-dropzone-uploader": "^2.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
