--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,5 +10,5 @@ psycopg2==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
 zipp==3.1.0
-tensorflow==2.0
-opencv-python==4.1.1.26
+# tensorflow==2.0
+# opencv-python==4.1.1.26
