--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.8.0-alpine
+FROM tensorflow/tensorflow:2.0.1-py3
 
 # set work directory
 WORKDIR /usr/src/app
@@ -9,22 +9,23 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
-RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
-
-RUN apk --update add \
-    build-base \
-    jpeg-dev \
-    zlib-dev
-
-# install dependencies
-RUN pip install --upgrade pip
-COPY ./requirements.txt /usr/src/app/requirements.txt
-RUN pip install -r requirements.txt
+RUN apt-get update \
+    && apt-get install -y libpq-dev python-dev python3-dev build-essential \ 
+    netcat \
+    libsm6 libxrender1 libxext6 curl
 
 # copy entrypoint.sh
+COPY ./requirements.txt /usr/src/app/requirements.txt
 COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
 
 # copy project
 COPY . /usr/src/app/
 COPY ./manage.py /usr/src/app/
+
+# install dependencies
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+
+# Download YOLOv3 weights
+RUN curl -o ./data/yolov3.weights -O https://pjreddie.com/media/files/yolov3.weights
+RUN python convert.py --weights ./data/yolov3.weights --output ./checkpoints/yolov3.tf
