--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     command: /usr/src/app/entrypoint.sh
+    volumes:
+      - ./backend/:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
@@ -24,12 +26,7 @@ services:
     stdin_open: true
   db:
     image: postgres:12.0-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
-
-volumes:
-  postgres_data:
